--- a/index.html
+++ b/index.html
@@ -5,43 +5,50 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>HappySkills – Spark Joy in Learning</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 </head>
 <body>
   <div class="loader"></div>
 
   <header>
-    <div class="logo">HappySkills</div>
+    <div class="logo">🌈 HappySkills</div>
     <nav>
       <a href="#about">About</a>
       <a href="#reviews">Reviews</a>
       <a href="#instagram">Instagram</a>
       <a href="#contact">Contact</a>
     </nav>
-    <button class="cta-btn" onclick="handleCTAClick()">Book a Demo</button>
-    <div class="toggle" onclick="toggleTheme()">🌓</div>
+    <div class="actions">
+      <button class="cta-btn" onclick="handleCTAClick()">Book a Demo</button>
+      <div class="toggle" onclick="toggleTheme()">🌓</div>
+    </div>
   </header>
 
   <section class="hero">
-    <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_yr6zz3wv.json" background="transparent" speed="1" loop autoplay></lottie-player>
-    <h1>Inspiring Young Minds, One Smile at a Time</h1>
-    <p>A joyful space to learn, grow, and explore creatively.</p>
-    <button class="cta-btn" onclick="handleCTAClick()">Get Started</button>
+    <div class="hero-text">
+      <h1>Inspiring Young Minds</h1>
+      <p>A joyful space to grow with creativity and confidence.</p>
+      <button class="cta-btn" onclick="handleCTAClick()">Get Started</button>
+    </div>
+    <lottie-player class="hero-lottie"
+      src="https://assets4.lottiefiles.com/packages/lf20_m3ixidnq.json"
+      background="transparent" speed="1" loop autoplay>
+    </lottie-player>
   </section>
 
   <section class="section" id="about">
     <h2>Why Choose Us?</h2>
-    <p>We make learning magical with custom-crafted experiences that spark joy and growth. With playful visuals, inclusive methods, and modern tech, HappySkills builds confidence from the inside out.</p>
+    <p>We design joyful learning journeys. From curiosity to confidence, our approach builds the skills that matter in a bright, welcoming environment for all children.</p>
   </section>
 
-  <section class="section" id="reviews">
-    <h2>What Our Parents Say</h2>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m1!1s0x0:0x0!2m2!1sen!2sus" width="100%" height="250" allowfullscreen="" loading="lazy" style="border:0;border-radius:12px;"></iframe>
+  <section class="section card-section" id="reviews">
+    <h2>Google Reviews</h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m1!1s0x0:0x0!2m2!1sen!2sus" width="100%" height="250" loading="lazy"></iframe>
   </section>
 
-  <section class="section" id="instagram">
-    <h2><img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="IG">Follow us on Instagram</h2>
+  <section class="section card-section" id="instagram">
+    <h2><img src="https://cdn-icons-png.flaticon.com/512/2111/2111463.png" alt="IG" class="icon" />Follow Us on Instagram</h2>
     <p><a href="https://www.instagram.com/your_handle" target="_blank">@your_handle</a></p>
     <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Cxyz123ABC/" data-instgrm-version="14"></blockquote>
     <script async src="https://www.instagram.com/embed.js"></script>
@@ -53,7 +60,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 HappySkills. All rights reserved.</p>
+    <p>&copy; 2025 HappySkills. Crafted with ❤️ by kids-first thinkers.</p>
   </footer>
 
   <script src="script.js"></script>
